--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -2283,7 +2283,7 @@ video{
   }
 
   function goPushRtmp(){
-      window.open("serverRecord.html?teacherId="+userId,"SERVER_RECORD");
+      window.open("serverRecord.html?teacherId="+userId+"&pushUrl="+pushUrl,"SERVER_RECORD");
   }
 
   function goLocalRecordPage(){
