--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -23,11 +23,11 @@
             <!--账号登录 -->
             <div class="account">
                 <div class="inputWrap">
-                    <input id='act' type="text" placeholder="请输入小蚂蚁账号">
+                    <input id='act' type="text" placeholder="请输入小蚂蚁账号" autocomplete="off">
                     <!--存输入的用户名 -->
                     <div style="display:none" id="actData"></div>
                 </div>
-                <input id="pwd" type="password" placeholder="请输入密码">
+                <input id="pwd" type="password" placeholder="请输入密码" autocomplete="off">
                 <button id="login">登录</button>
             </div>
 
