--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -7,6 +7,12 @@
     <link rel="shortcut icon" href="img/logo_title.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/syncClassroom.css">
     <script type="application/javascript" src="js/platform.js"></script>
+    <style type="text/css">
+        .layui-layer-content{
+            color: #fff !important;
+            font-size: 12px !important;
+        }
+    </style>
 </head>
 <body>
 <div class="mask" style="opacity: 0"></div>
