--- a/public/schoolClass/videoSourceInClass.html
+++ b/public/schoolClass/videoSourceInClass.html
@@ -41,25 +41,16 @@
     var audioDeviceId = Service.getQueryString("audioDeviceId");
     var from = Service.getQueryString("from");
     var userId = Service.getQueryString("userId");
+    var fenbianlv = Service.getQueryString("fenbianlv");
+    fenbianlv = (fenbianlv == "" || fenbianlv == "undefined")?"480p":fenbianlv;
     userId = from=="master"?random(-10000000,-20000000):userId;
 
     $(document).ready(function(){
-        $("#video_name").text(userName+"-本地摄像头");
+        $("#video_name").text(userName+"-本地摄像头-"+fenbianlv);
         var publish = Service.getQueryString("publish");
         if(publish == "true"){
             joinRoom();
         }else{
-            // var audioSource = audioDeviceId;
-            // var videoSource = videoDeviceId;
-            // var constraints = {
-            //     audio: {deviceId: audioSource ? {exact: audioSource} : undefined},
-            //     video: {deviceId: videoSource ? {exact: videoSource} : undefined,width:1920,height:1080}
-            // };
-            // navigator.mediaDevices.getUserMedia(constraints).
-            // then(function(stream){
-            //     $("#preview_video")[0].srcObject = stream;
-            // }).catch(function(e){
-            // });
             $("#preview_video").remove();
             $("#preview_video_container").append("<div class='not_lianmai_tip'><span>等待被连麦</span><span onclick='parentOnlyUsbCameraPreview();' class='not_lianmai_view'>预览</span></div>");
         }
@@ -80,7 +71,7 @@
         then(function(stream){
             $("#preview_video")[0].srcObject = stream;
             localStream = stream;
-            client.publish(localStream,"agora_local");
+            client.publish(localStream,"agora_local",fenbianlv);
         }).catch(function(e){
             console.log(e);
         });
@@ -88,7 +79,9 @@
 
     function unpublish(){
         try{
+            console.log("remove userid:"+userId +" --- userName:"+userName);
             client.unpublish(localStream);
+            client.leave();
             localStream.close();
         }catch(e){
             console.log(e);
