--- a/public/schoolClass/classReviewList.html
+++ b/public/schoolClass/classReviewList.html
@@ -61,8 +61,8 @@
     $("#loading").show();
     $(document).ready(function(){
         getUnionClassList();
+        console.log('添加了监听事件');
     });
-
 
     //点击加载更多
     $("#loading").on('click',function(){
