--- a/public/schoolClass/videoSourceSelect.html
+++ b/public/schoolClass/videoSourceSelect.html
@@ -28,8 +28,33 @@
         .layer-anim {
             animation: none !important;
         }
+        .fenbianlv_select{
+            margin-bottom: 10px;
+        }
+        .fenbianlv_select span{
+            margin-right: 10px;
+            padding: 0 8px;
+            border-radius: 2px;
+            border: 1px solid #e5e5e5;
+            color: #666;
+            height: 20px;
+            line-height: 20px;
+            display: inline-block;
+        }
+        .fenbianlv_tips{
+            margin-right: 0;
+            border: none;
+            color: #666;
+            font-size: 11px;
+            margin-top: 15px;
+        }
         .fenbianlv_selected{
-            background: red;
+            color: #4285F4 !important;
+            border: 1px solid #4285F4 !important;
+            height: 20px;
+            line-height: 20px;
+            padding: 0 8px;
+            border-radius: 2px;
         }
     </style>
 </head>
@@ -81,9 +106,9 @@
             .then(function (devices) {
                 var audios = new Array();
                 var videos = new Array();
-                var audioHtml = "<span class='left left2'>音频\n</span><div class='right-item'>";
-                var videoHtml = "<span class='left left2'>视频\n</span><div class='right-item'>";
-                var fenbianlvHtml = "<div>分辨率:<span onclick='changeFenbianlv(this);'>480p</span><span class='fenbianlv_selected' onclick='changeFenbianlv(this);'>720p</span><span onclick='changeFenbianlv(this);'>1080p</span></div>";
+                var audioHtml = "<span class='left left2'>音&nbsp&nbsp&nbsp&nbsp频\n</span><div class='right-item'>";
+                var videoHtml = "<span class='left left2'>视&nbsp&nbsp&nbsp&nbsp频\n</span><div class='right-item'>";
+                var fenbianlvHtml = "<span class='left left2'>分辨率</span><div class='fenbianlv_select'><span onclick='changeFenbianlv(this);'>480p</span><span class='fenbianlv_selected' onclick='changeFenbianlv(this);'>720p</span><span onclick='changeFenbianlv(this);'>1080p</span><br><div class='fenbianlv_tips'>清晰度越高，会占用更多的宽带和CPU</div></div>";
 
                 devices.forEach(function (device) {
                     if (device.deviceId == 'default') {
@@ -111,7 +136,7 @@
                     skin: "videoSource",
                     area: ['100%', '480px'], //宽高
                     offset: 'b',
-                    content: "<div class='list-content'><div class='list-item'>" + videoHtml + "</div><div class='list-item'>" + audioHtml + "</div><div class='list-item'>"+fenbianlvHtml+"</div><div class='list-item'><span class='left left2'>昵称</span><div class='inputWrap inputWrap-3'><input id='nick' autocomplete='off'  class='right nickname' /></div></div><div class='list-item list-item-video'><video id='preview_video' width='254px' height='150px' autoplay muted></video></div></div><div class='btn-cont'><span onclick='layer.closeAll();' class='btn-blue Ghost-btn' >取消</span><span onclick='preView();' class='btn-blue Solid-btn'>预览</span><span onclick='useInclass();' class='btn-blue Solid-btn'>使用</span></div>"
+                    content: "<div class='list-content'><div class='list-item'>" + videoHtml + "</div><div class='list-item'>" + audioHtml + "</div><div class='list-item'>"+fenbianlvHtml+"</div><div class='list-item'><span class='left left2'>昵&nbsp&nbsp&nbsp&nbsp称</span><div class='inputWrap inputWrap-3'><input id='nick' autocomplete='off'  class='right nickname' /></div></div><div class='list-item list-item-video'><video id='preview_video' width='254px' height='150px' autoplay muted></video></div></div><div class='btn-cont'><span onclick='layer.closeAll();' class='btn-blue Ghost-btn' >取消</span><span onclick='preView();' class='btn-blue Solid-btn'>预览</span><span onclick='useInclass();' class='btn-blue Solid-btn'>使用</span></div>"
                 });
 
             }).catch(function (err) {
@@ -132,7 +157,7 @@
         }
         detectRtspCameraAudio(function (audios, audioHtml) {
             var html = "";
-            var fenbianlvHtml = "<div>分辨率:<span onclick='changeFenbianlv(this);'>480p</span><span class='fenbianlv_selected' onclick='changeFenbianlv(this);'>720p</span><span onclick='changeFenbianlv(this);'>1080p</span></div>";
+            var fenbianlvHtml = "<span class='left'>分&nbsp辨&nbsp率</span><div class='inputWrap fenbianlv_select'><span onclick='changeFenbianlv(this);'>480P</span><span class='fenbianlv_selected' onclick='changeFenbianlv(this);'>720P</span><span onclick='changeFenbianlv(this);'>1080P</span><br><div class='fenbianlv_tips'>清晰度越高，会占用更多的宽带和CPU</div></div>";
             if (audios.length > 0) {
                 html = "<div class='list-content'><div class='list-item'><span class='left'>rtsp地址</span><div class='inputWrap'><input id='rtsp_url' autocomplete='off' class='right nickname' value='rtsp://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov'/><div style='display:none' id='rtsUrl'></div></div></div><div class='list-item'>" + audioHtml + "</div><div class='list-item'>"+fenbianlvHtml+"</div><div class='list-item'><span class='justify left'>课堂昵称<span></span></span><div class='inputWrap'><input id='nick' autocomplete='off' class='right nickname'/></div></div><div class='list-item list-item-video'><canvas id='rtsp_preview_canvas' width='299px' height='161px'></canvas></div></div><div class='btn-cont'><span onclick='cancelUseRtsp();' class='btn-blue Ghost-btn'>取消</span><span onclick='rtspPreview();' class='btn-blue Solid-btn'>预览</span><span onclick='useRtspInclass(this)' id='useBtn' class='btn-blue Solid-btn'" +
                     ">使用</span></div>";
