--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -88,7 +88,7 @@
 <script type="application/javascript" src="js/simple_websocket_connection.js"></script>
 <script>
 
-var debug = true;
+var debug = false;
 var iframeOrgrin = debug?'http://192.168.50.188:7093':'https://jiaoxue.maaee.com:9093';
 
     function checkShowRecord(){
