--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -12,6 +12,9 @@
             border: none !important;
             box-shadow: none !important;
         }
+        .layui-layer{
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -249,6 +252,8 @@ var iframeOrgrin = debug?'http://192.168.50.188:7093':'https://jiaoxue.maaee.com
                 }, 300)
             }else if(res.method == 'fullScreen'){
                 console.log(res,'全屏事件data');
+                var left = 0;
+                var top = document.body.clientHeight - 150 - 42;
                     let index = layer.open({
                       type: 2,
                       title:  $('.review_iframe_title').text(),
@@ -280,6 +285,8 @@ var iframeOrgrin = debug?'http://192.168.50.188:7093':'https://jiaoxue.maaee.com
                       $('.layui-layer-content iframe')[0].style = 'height: 150px';
                       // 设置全屏高度后导致拖动窗口高度发生变化,重置窗口高度
                       $('.layui-layer')[0].style.height = '150px';
+                      $('.layui-layer').get(0).style.left = left + 'px';
+                      $('.layui-layer').get(0).style.top = top +'px';
                       },
                       cancel: function(){
 //                      let fullVideo = $('.layui-layer-content iframe').get(0).contentWindow.document.getElementById('fullVideo');
@@ -289,10 +296,22 @@ var iframeOrgrin = debug?'http://192.168.50.188:7093':'https://jiaoxue.maaee.com
                       }
                       $('.layui-layer-content iframe').get(0).contentWindow.postMessage(data,'*');
                       console.log('执行完毕')
-                      }
+                      },
+                      moveEnd: function(layero){
+                                              // console.log($('.layui-layer').get(0).style.left,'$(\'.layui-layer\').get(0).style.left');
+                                              // console.log($('.layui-layer').get(0).style.top,'$(\'.layui-layer\').get(0).style.top');
+                                              left = $('.layui-layer').get(0).style.left.toString().substring($('.layui-layer').get(0).style.left.toString().length - 2,$('.layui-layer').get(0).style.left.toString().length);
+                                              top = $('.layui-layer').get(0).style.top.toString().substring($('.layui-layer').get(0).style.top.toString().length - 2,$('.layui-layer').get(0).style.top.toString().length);
+                       }
                     });
                     $('.layui-layer-content iframe')[0].style = 'height: '+(document.body.clientHeight - 43)+'px';
-                    layer.full(index);
+                    console.log('123123123');
+                    $('.layui-layer').get(0).style.left = left;
+                    layer.full(index,function(){
+                        console.log('!!!!!!!!!!!!!!!!!!!!!!!!!');
+                        $('.layui-layer').show();
+                    });
+                    $('.layui-layer').get(0).style.left = left;
 
             }else if(res.method == 'didCancel'){
                 console.log('中控收到关闭窗口信息');
