--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -12,7 +12,7 @@
             border: none !important;
             box-shadow: none !important;
         }
-        .layui-layer{
+        .layui-layer .layui-layer-iframe .layui-layer-border .amplification .layer-anim{
             display: none;
         }
     </style>
