--- a/public/schoolClass/serverRecord.html
+++ b/public/schoolClass/serverRecord.html
@@ -23,11 +23,15 @@
             background: transparent;
         }
         .recording-btn{
-            padding: 1px 0 0 0;
+            padding: 0;
             line-height: 1;
             margin: 0 auto;
-            width: 44px;
+            width: 92px;
             text-align: center;
+            height: 22px;
+            background: #e0e0e0;
+            border-radius: 22px;
+            margin-top: 4px;
         }
         .videoSource-red{
             width: 18px;
@@ -35,27 +39,48 @@
             display: inline-block;
         }
         .recordingTipText{
-            background: red;
-            color: #fff;
-            font-size: 8px;
-            line-height: 11px;
-            height: 12px;
-            vertical-align: top;
-            display: block;
-            margin-top: -5px;
-            border-radius: 1px;
-            padding: 1px 0;
+            background: transparent;
+            color: #666;
+            font-size: 12px;
+            line-height: 22px;
+            height: 22px;
+            width: 70px;
+            padding-left: 3px;
+            box-sizing: border-box;
+            display: inline-block;
             z-index: 11;
             position: relative;
+            float: left;
+            text-align: center;
+        }
+        .recordingTipTextStop{
+            height: 22px;
+            width: 22px;
+            border-radius: 22px;
+            display: inline-block;
+            z-index: 11;
+            position: relative;
+            float: right;
+            background: url("img/suspended-icon.png") no-repeat;
+            background-size: 22px;
+        }
+        .recordingTipTextStop:hover{
+            height: 22px;
+            width: 22px;
+            background: url("img/suspended-iconHover.png") no-repeat;
+            background-size: 22px;
         }
 
     </style>
 </head>
 
 <body>
-    <div class="recording-btn" onclick="stopCapture();" title="点击可停止录制" style="cursor:pointer">
+    <div class="recording-btn">
+        <!--
         <i class="videoSource-red" id="recordingTipImg"><img src="images/play-red-icon.gif" width="100%" /></i>
-        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">推流中..</span>
+        -->
+        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">推流中</span>
+        <span class="recordingTipTextStop" onclick="stopCapture();" title="点击可停止录制" style="cursor:pointer"></span>
     </div>
 </body>
 
