--- a/public/schoolClass/localRecord.html
+++ b/public/schoolClass/localRecord.html
@@ -22,19 +22,14 @@
             background: transparent;
         }
         .recording-btn{
-            padding: 1px 0 0 0;
+            padding: 0;
             line-height: 1;
-            margin: 0 auto;
-            min-width: 20px;
+            margin: 4px auto 0 auto;
+            width: 87px;
             text-align: center;
-            display: inline-block;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            -ms-transform: translateX(-50%);
-            -moz-transform: translateX(-50%);
-            -webkit-transform: translateX(-50%);
-            -o-transform: translateX(-50%);
+            height: 22px;
+            background: rgba(0,0,0,0.1);
+            border-radius: 22px;
         }
         .videoSource-red{
             width: 18px;
@@ -42,26 +37,58 @@
             display: inline-block;
         }
         .recordingTipText{
-            background: red;
-            color: #fff;
-            font-size: 8px;
-            line-height: 11px;
-            height: 12px;
-            vertical-align: top;
-            display: block;
-            margin-top: -5px;
-            border-radius: 1px;
-            padding: 1px 4px;
+            background: transparent;
+            color: #000;
+            font-size: 12px;
+            line-height: 22px;
+            height: 22px;
+            width: 46px;
+            padding-left: 10px;
+            box-sizing: border-box;
+            display: inline-block;
             z-index: 11;
             position: relative;
+            float: left;
+            text-align: center;
+        }
+        .recordingTipTextStop{
+            height: 14px;
+            width: 14px;
+            border-radius: 22px;
+            display: inline-block;
+            z-index: 11;
+            position: relative;
+            float: right;
+            background: url(img/suspended-icon.png?v=1) no-repeat;
+            background-size: 14px;
+            margin-top: 4px;
+            margin-right: 10px;
+        }
+        .recording-line{
+            height: 12px;
+            width: 0;
+            position: relative;
+            top: 6px;
+            margin: 0 8px;
+            float: left;
+        }
+        .recording-line:after{
+            content: "";
+            border-left: 1px solid rgba(255,255,255,0.5);
+            transform: translateX(0.5);
+            height: 100%;
+            width: 1px;
+
         }
     </style>
 </head>
 
 <body>
-    <div class="recording-btn" onclick="stopCapture();" title="点击可停止录制" style="cursor:pointer">
-        <i class="videoSource-red" id="recordingTipImg"><img src="images/play-red-icon.gif" width="100%" /></i>
-        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">客户端录制中..</span>
+    <div class="recording-btn"  title="点击可停止录制">
+        <!--<i class="videoSource-red" id="recordingTipImg"><img src="images/play-red-icon.gif" width="100%" /></i>-->
+        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">录制中</span>
+        <span class="recording-line"></span>
+        <span class="recordingTipTextStop"  onclick="stopCapture();" style="cursor:pointer" title="点击可停止录制" style="cursor:pointer"></span>
     </div>
 </body>
 
