--- a/public/schoolClass/localRecord.html
+++ b/public/schoolClass/localRecord.html
@@ -25,7 +25,7 @@
             padding: 0;
             line-height: 1;
             margin: 4px auto 0 auto;
-            width: 87px;
+            width: 121px;
             text-align: center;
             height: 22px;
             background: rgba(0,0,0,0.1);
@@ -42,7 +42,7 @@
             font-size: 12px;
             line-height: 22px;
             height: 22px;
-            width: 46px;
+            width: 80px;
             padding-left: 10px;
             box-sizing: border-box;
             display: inline-block;
@@ -86,7 +86,7 @@
 <body>
     <div class="recording-btn"  title="点击可停止录制">
         <!--<i class="videoSource-red" id="recordingTipImg"><img src="images/play-red-icon.gif" width="100%" /></i>-->
-        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">录制中</span>
+        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">本地录制中...</span>
         <span class="recording-line"></span>
         <span class="recordingTipTextStop"  onclick="stopCapture();" style="cursor:pointer" title="点击可停止录制" style="cursor:pointer"></span>
     </div>
