--- a/public/schoolClass/serverRecord.html
+++ b/public/schoolClass/serverRecord.html
@@ -26,7 +26,7 @@
             padding: 0;
             line-height: 1;
             margin: 4px auto 0 auto;
-            width: 87px;
+            width: 97px;
             text-align: center;
             height: 22px;
             background: rgba(0,0,0,0.1);
@@ -43,7 +43,7 @@
             font-size: 12px;
             line-height: 22px;
             height: 22px;
-            width: 46px;
+            width: 56px;
             padding-left: 10px;
             box-sizing: border-box;
             display: inline-block;
@@ -89,7 +89,7 @@
         <!--
         <i class="videoSource-red" id="recordingTipImg"><img src="images/play-red-icon.gif" width="100%" /></i>
         -->
-        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">推流中</span>
+        <span id="recordingTipText" class="recordingTipText" style="-webkit-app-region: drag;">推流中...</span>
         <span class="recording-line"></span>
         <span class="recordingTipTextStop" onclick="stopCapture();" title="点击可停止录制" style="cursor:pointer"></span>
     </div>
